# dloop

./: .gitignore  CMakeLists.txt  README.md  create_eclipse_project  itest  test
core/: CMakeLists.txt
core/DLoopDetector/: demoDetector.h
examples/: demo_bow2.cpp  demo_brief.cpp  demo_surf.cpp
shell@Kylin@Wallaby/: detectLoop_malaga07.sh  makeBow_malaga07.sh
